[package]
name = "yawt-lib"
version = "0.1.0"
edition = "2021"
license = "Apache License Version 2.0"

[dependencies]
chrono = { version = "0.4", features = ["serde"]}
uuid = { version = "1.10.0", features = ["v4","serde"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
diesel = { version = "2.2.0", features = ["sqlite", "returning_clauses_for_sqlite_3_35"] }